--- a/index.html
+++ b/index.html
@@ -9,7 +9,30 @@
 </head>
 <body>
     <header>
-        <h1>Getting sTARTED</h1>
+        <nav class="nav">
+            <div id="brandName">
+                <a href="#"><img src="./images/favicon.png"></a>
+                <h1>Name</h1>
+            </div>
+
+            <div>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Intro</a></li>
+                    <li><a href="#">Features</a></li>
+                    <li><a href="#">Details</a></li>
+                    <li class="dropdown"><a href="#" class="dropTrigger">Drop</a>
+                        <ul class="dropContent">
+                            <li><a href="#">Article Details</a></li>
+                            <li><a href="#">Terms Conditions</a></li>
+                            <li><a href="#">Privacy Policy</a></li>
+                        </ul>
+                    </li>
+                    <li><button type="button"> Start selling</button></li>
+                    
+                </ul>
+            </div>
+        </nav>
     </header>
     
 
