--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 
             <div class="nav">
                 <ul class="nav-list">
-                    <li><a href="#home">Home</a></li>
+                    <li><a href="#home" class="active">Home</a></li>
                     <li><a href="#">Intro</a></li>
                     <li><a href="#">Features</a></li>
                     <li><a href="#">Details</a></li>
-                    <li class="dropdown"><a href="#" class="dropTrigger">Drop</a>
+                    <li class="dropdown"><a href="#" class="dropTrigger">Drop <i class="arrow down"></i></a>
                         <ul class="drop-content">
                             <li><a href="#">Article Details</a></li>
                             <li><a href="#">Terms Conditions</a></li>
