--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
     <title>Kora | Homepage</title>
 </head>
 <body>
@@ -33,6 +35,13 @@
                     
                 </ul>
             </div>
+
+            <div class="hamburger">
+                <a href="javascript:void(0);" class="icon" <!--onclick="showNav()-->">
+                    <i class="fa fa-bars"></i>
+                </a>
+            </div>
+            
         </nav>
     </header>
     <!--Header end-->
