--- a/index.html
+++ b/index.html
@@ -18,8 +18,14 @@
                 <h1>Name</h1>
             </div>
 
+            <div class="hamburger">
+                <a href="javascript:void(0);" class="icon" onclick="showNav()">
+                    <i class="fa fa-bars"></i>
+                </a>
+            </div>
+
             <div class="nav">
-                <ul class="nav-list">
+                <ul class="nav-list" id="nav-list">
                     <li><a href="#home" class="active">Home</a></li>
                     <li><a href="#">Intro</a></li>
                     <li><a href="#">Features</a></li>
@@ -36,11 +42,6 @@
                 </ul>
             </div>
 
-            <div class="hamburger">
-                <a href="javascript:void(0);" class="icon" <!--onclick="showNav()-->">
-                    <i class="fa fa-bars"></i>
-                </a>
-            </div>
             
         </nav>
     </header>
